apps/tinycloud-platform/ingressroute-blog.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: blog
  namespace: tinycloud
  labels:
    app.kubernetes.io/name: blog
    app.kubernetes.io/component: ingress
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`sasiru.lk`) || Host(`www.sasiru.lk`)
      kind: Rule
      priority: 20
      services:
        - name: blog
          port: 80
  tls:
    secretName: tinycloud-platform-tls
